--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,15 @@
-== README
+= EngList
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
+This is a simple "to-do" List for engineers tasks for project involve integration between electronics, mechanics and software.
+This main idea is to join all the software management and hardware procedures in one single application.
 
 
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+
+
+== Aplication Specs
+
+* Ruby 1.9.3p448
+
+* Rails 4.0.1
+
+* MySQL(gonna change Postgre when finished)
